--- a/script/Cargo.toml
+++ b/script/Cargo.toml
@@ -13,7 +13,7 @@ name = "evm"
 path = "src/bin/evm.rs"
 
 [dependencies]
-sp1-sdk = "3.0.0"
+sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.1" }
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 serde = { version = "1.0.200", default-features = false, features = ["derive"] }
 clap = { version = "4.0", features = ["derive", "env"] }
@@ -21,6 +21,7 @@ tracing = "0.1.40"
 hex = "0.4.3"
 alloy-sol-types = { workspace = true }
 fibonacci-lib = { path = "../lib" }
+bincode = "1.3.3"
 
 [build-dependencies]
-sp1-helper = "3.0.0"
+sp1-helper = "1.0.1"
