--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-name = "fibonacci-lib"
+name = "zkvdb-lib"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 alloy-sol-types = { workspace = true }
+# vector index with HNSW
+hora = "0.1.1"
