--- a/script/Cargo.toml
+++ b/script/Cargo.toml
@@ -20,8 +20,10 @@ clap = { version = "4.0", features = ["derive", "env"] }
 tracing = "0.1.40"
 hex = "0.4.3"
 alloy-sol-types = { workspace = true }
-fibonacci-lib = { path = "../lib" }
 bincode = "1.3.3"
+
+zkvdb-lib = { path = "../lib" }
+zkvdb-embedder = { path = "../embedder" }
 
 [build-dependencies]
 sp1-helper = "1.0.1"
