--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
-members = ["lib", "program", "script", "embedder"]
+members = ["lib", "program", "script", "embedder", "aggregator"]
 resolver = "2"
 
 [workspace.dependencies]
 alloy-sol-types = "0.7.7"
+sha2 = "0.10.8"
