--- a/aggregator/Cargo.toml
+++ b/aggregator/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-version = "0.1.0"
-name = "zkvdb-program"
+name = "aggregation-program"
+version = "1.1.0"
 edition = "2021"
+publish = false
 
 [dependencies]
-alloy-sol-types = { workspace = true }
+sha2.workspace = true
 sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.1", features = [
     "verify",
 ] }
-zkvdb-lib = { path = "../lib" }
