--- a/.github/workflows/prove.yml
+++ b/.github/workflows/prove.yml
@@ -2,9 +2,9 @@ name: Build Program
 
 on:
   workflow_dispatch:
-  push:
-    branches: [main]
-  pull_request:
+  # push:
+  #   branches: [main]
+  # pull_request:
 
 env:
   FOUNDRY_PROFILE: ci
