--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -4,8 +4,8 @@ name = "zkvdb-program"
 edition = "2021"
 
 [dependencies]
-alloy-sol-types = { workspace = true }
 sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.1", features = [
     "verify",
 ] }
 zkvdb-lib = { path = "../lib" }
+sha2.workspace = true
