--- a/script/Cargo.toml
+++ b/script/Cargo.toml
@@ -19,12 +19,12 @@ serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 serde = { version = "1.0.200", default-features = false, features = ["derive"] }
 clap = { version = "4.0", features = ["derive", "env"] }
 tracing = "0.1.40"
-hex = "0.4.3"
-alloy-sol-types = { workspace = true }
 bincode = "1.3.3"
 
 zkvdb-lib = { path = "../lib" }
 zkvdb-embedder = { path = "../embedder" }
+
+hex.workspace = true
 
 [build-dependencies]
 sp1-helper = "1.0.1"
