--- a/embedder/Cargo.toml
+++ b/embedder/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 [dependencies]
 ollama-rs = "0.2.1"
 tokio = { version = "1", features = ["full"] }
-serde = "*"
-serde_json = "*"
+serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
+serde = { version = "1.0.200", default-features = false, features = ["derive"] }
 clap = { version = "4.0", features = ["derive"] }
+hex.workspace = true
+sha2.workspace = true
